project-pane: CSS Issue, project health tab scrollbar #12229

--- a/justdo-project-pane/ui/project-pane/project-pane.sass
+++ b/justdo-project-pane/ui/project-pane/project-pane.sass
@@ -71,7 +71,6 @@ $project-pane-header-height: 30px // Important! if you change this one, search t
     pointer-events: none
 
 .justdo-project-pane-tab-container
-  overflow: auto
   position: absolute
   top: 36px
   bottom: 0
